Added Login System

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,10 +1,37 @@
+<style>
+	input.ng-invalid.ng-touched {
+	    background-color: #FA787E;
+	  }
+	  .invalid{
+	  	background-color: #FA787E;	
+	  }
+
+</style>
 <h1>Todo App</h1>
 <p>This is an app that allows you to make a todo list to keep track of your tasks. In order to keep track of your list on multiple devices, you must give it a unique name.</p>
-<h2>Create new list</h2>
+<h2>Create New List</h2>
 <div class="form-inline">
 	<div class="form-group">
-		<input type="text" ng-model="newList" ngMinlength="4" ngMaxlength="20" placeholder="name" required/> 
+		<div class="input-group">
+			<input ng-class="{'invalid':newListInvalid}" class="form-control" type="text" ng-model="newList" minlength="4" maxlength="20" placeholder="List Name" required/>
+			<span class="input-group-btn">
+			<button class="btn btn-primary" ng-click="createNewList()">Create</button>
+		</span>
+		</div>
 	</div>
 </div>
+<h3 ng-show="newListInvalid">
+	List name already taken
+</h3>
 
-<h2>Load new list</h2>
+<h2>Load Previous List</h2>
+<div class="form-inline">
+	<div class="form-group">
+		<div class="input-group">
+			<input ng-class="{'invalid':!oldListInvalid}" class="form-control" type="text" ng-model="oldList" minlength="4" maxlength="20" placeholder="List Name" required/>
+			<span class="input-group-btn">
+			<button class="btn btn-primary" ng-click="loadOld()">Load</button>
+		</span>
+		</div>
+	</div>
+</div>
